Add custom style.css file

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>DCAT-AP viewer</title>
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@4.0.0-alpha.5/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
 <div id="app"></div>
