Update html head
Update version of bootstrap, add meta tags.

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>DCAT-AP viewer</title>
-    <link rel="stylesheet" href="https://unpkg.com/bootstrap@4.0.0-alpha.5/dist/css/bootstrap.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#057fa5">
+    <meta name="msapplication-TileColor" content="#057fa5">
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap@4.0.0-alpha.6/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/style.css">
+    <title>DCAT-AP Viewer</title>
 </head>
 <body>
 <div id="app"></div>
