Set paths to relative

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <meta name="theme-color" content="#057fa5">
     <meta name="msapplication-TileColor" content="#057fa5">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@4.0.0-alpha.6/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="assets/style.css">
     <title>DCAT-AP Viewer</title>
 </head>
 <body>
 <div id="app"></div>
-<script src="/public/bundle.js"></script>
+<script src="public/bundle.js"></script>
 </body>
 </html>
