--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,6 @@
 </head>
 <body>
 <div id="app"></div>
-<script src="public/bundle.js"></script>
+<script src="/public/bundle.js"></script>
 </body>
 </html>
